# haskell-bobkonf2026

./: README.md  haskell-bobkonf2026.cabal
app/: Main.hs
src/: Tutorial.hs
