cabal-version: 3.0
name: haskell-bobkonf2026
version: 0.1
build-type: Simple

common general
  default-language: GHC2021
  ghc-options: -Wall

library
  import: general
  hs-source-dirs: src
  ghc-options: -threaded
  build-depends:
    base,
    aeson,
    containers,
    scotty,
    stm,
    time
  exposed-modules:
    Tutorial

executable bobserver
  import: general
  hs-source-dirs: app
  ghc-options: -threaded
  build-depends:
    base,
    haskell-bobkonf2026
  main-is:
    Main.hs
